--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@google/genai": "^1.41.0",
     "lucide-react": "^0.571.0",
     "recharts": "^3.7.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "framer-motion": "^11.11.11",
+    "three": "0.170.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
