--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.41.0",
+    "framer-motion": "^11.11.11",
+    "lucide-react": "^0.571.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "@google/genai": "^1.41.0",
-    "lucide-react": "^0.571.0",
-    "recharts": "^3.7.0",
+    "react-is": "^19.2.4",
     "react-router-dom": "^7.13.0",
-    "framer-motion": "^11.11.11",
+    "recharts": "^3.7.0",
     "three": "0.170.0"
   },
   "devDependencies": {
